@@ -593,8 +593,6 @@ bt819_detect_client (struct i2c_adapter *adapter,
 			client->addr << 1);
 	}
 
-	MOD_INC_USE_COUNT;
-
 	return 0;
 }
 
@@ -617,8 +615,6 @@ bt819_detach_client (struct i2c_client *client)
 
 	kfree(decoder);
 	kfree(client);
-
-	MOD_DEC_USE_COUNT;
 
 	return 0;
 }
