@@ -508,8 +508,6 @@ saa7111_detect_client (struct i2c_adapter *adapter,
 			client->addr << 1);
 	}
 
-	MOD_INC_USE_COUNT;
-
 	return 0;
 }
 
@@ -536,8 +534,6 @@ saa7111_detach_client (struct i2c_client *client)
 
 	kfree(decoder);
 	kfree(client);
-
-	MOD_DEC_USE_COUNT;
 
 	return 0;
 }
